@@ -1,42 +1,7 @@
 package health.ere.ps.service.gematik;
 
-import java.io.ByteArrayOutputStream;
-import java.io.IOException;
-import java.io.StringReader;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.time.Instant;
-import java.time.ZoneOffset;
-import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Iterator;
-import java.util.List;
-import java.util.UUID;
-import java.util.concurrent.TimeUnit;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-import java.util.stream.Collectors;
-
-import javax.xml.datatype.DatatypeConfigurationException;
-import javax.xml.datatype.DatatypeFactory;
-
-import org.apache.xml.security.c14n.CanonicalizationException;
-import org.apache.xml.security.c14n.Canonicalizer;
-import org.apache.xml.security.c14n.InvalidCanonicalizerException;
-import org.apache.xml.security.parser.XMLParserException;
-import org.hl7.fhir.r4.model.Binary;
-import org.hl7.fhir.r4.model.Bundle;
-import org.hl7.fhir.r4.model.Coding;
-import org.hl7.fhir.r4.model.Coverage;
-import org.hl7.fhir.r4.model.Identifier;
-import org.hl7.fhir.r4.model.Parameters;
-import org.hl7.fhir.r4.model.Parameters.ParametersParameterComponent;
-import org.hl7.fhir.r4.model.Task;
-import org.jboss.resteasy.client.jaxrs.internal.ResteasyClientBuilderImpl;
-
 import ca.uhn.fhir.context.FhirContext;
+import com.google.common.annotations.VisibleForTesting;
 import de.gematik.ws.conn.connectorcommon.v5.Status;
 import de.gematik.ws.conn.connectorcontext.v2.ContextType;
 import de.gematik.ws.conn.eventservice.v7.GetCards;
@@ -50,6 +15,8 @@ import de.gematik.ws.conn.signatureservice.v7_5_5.ComfortSignatureStatusEnum;
 import de.gematik.ws.conn.signatureservice.v7_5_5.SessionInfo;
 import de.gematik.ws.conn.signatureservice.v7_5_5.SignatureModeEnum;
 import de.gematik.ws.conn.signatureservice.wsdl.v7.FaultMessage;
+import de.gematik.ws.conn.signatureservice.wsdl.v7.SignatureServicePortTypeV740;
+import de.gematik.ws.conn.signatureservice.wsdl.v7.SignatureServicePortTypeV755;
 import health.ere.ps.config.AppConfig;
 import health.ere.ps.config.RuntimeConfig;
 import health.ere.ps.config.UserConfig;
@@ -87,6 +54,46 @@ import jakarta.ws.rs.client.Entity;
 import jakarta.ws.rs.core.Response;
 import jakarta.xml.ws.Holder;
 import oasis.names.tc.dss._1_0.core.schema.Base64Data;
+import org.apache.xml.security.c14n.CanonicalizationException;
+import org.apache.xml.security.c14n.Canonicalizer;
+import org.apache.xml.security.c14n.InvalidCanonicalizerException;
+import org.apache.xml.security.parser.XMLParserException;
+import org.hl7.fhir.r4.model.Binary;
+import org.hl7.fhir.r4.model.Bundle;
+import org.hl7.fhir.r4.model.Coding;
+import org.hl7.fhir.r4.model.Coverage;
+import org.hl7.fhir.r4.model.Identifier;
+import org.hl7.fhir.r4.model.Parameters;
+import org.hl7.fhir.r4.model.Parameters.ParametersParameterComponent;
+import org.hl7.fhir.r4.model.Task;
+import org.jboss.resteasy.client.jaxrs.internal.ResteasyClientBuilderImpl;
+
+import javax.xml.datatype.DatatypeConfigurationException;
+import javax.xml.datatype.DatatypeFactory;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.StringReader;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.time.Instant;
+import java.time.ZoneOffset;
+import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Iterator;
+import java.util.List;
+import java.util.UUID;
+import java.util.concurrent.TimeUnit;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+import java.util.stream.Collectors;
+
+import static health.ere.ps.service.connector.cards.ConnectorCardsService.CardHandleType.HBA;
+import static java.nio.charset.StandardCharsets.ISO_8859_1;
+import static java.nio.charset.StandardCharsets.UTF_8;
 
 @ApplicationScoped
 public class ERezeptWorkflowService extends BearerTokenManageService {
@@ -126,7 +133,6 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
 
     Client client;
     private String userIdForComfortSignature;
-    
 
     public String getUserIdForComfortSignature() {
         return this.userIdForComfortSignature;
@@ -141,9 +147,9 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
      */
     static String getAccessCode(Task task) {
         return task.getIdentifier().stream()
-                .filter(id -> id.getSystem().equals(EREZEPT_ACCESS_CODE_SYSTEM)
+            .filter(id -> id.getSystem().equals(EREZEPT_ACCESS_CODE_SYSTEM)
                 || id.getSystem().equals(EREZEPT_ACCESS_CODE_SYSTEM_GEM)).findFirst()
-                .orElse(new Identifier()).getValue();
+            .orElse(new Identifier()).getValue();
     }
 
     @PostConstruct
@@ -162,7 +168,7 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
                 ((ResteasyClientBuilderImpl) clientBuilder).httpEngine(new VAUEngine(appConfig.getPrescriptionServiceURL()));
             } catch (Exception ex) {
                 log.log(Level.SEVERE, "Could not enable VAU", ex);
-                if(exceptionEvent != null) {
+                if (exceptionEvent != null) {
                     exceptionEvent.fireAsync(ex);
                 }
             }
@@ -171,12 +177,15 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
     }
 
     /**
-     * This function catches the sign and upload bundle events and does the
-     * necessary processing
+     * This function catches the sign and upload bundle events and does the necessary processing
      */
     public void onSignAndUploadBundlesEvent(@ObservesAsync SignAndUploadBundlesEvent signAndUploadBundlesEvent) {
         try {
-            requestNewAccessTokenIfNecessary(signAndUploadBundlesEvent.getRuntimeConfig(), signAndUploadBundlesEvent.getReplyTo(), signAndUploadBundlesEvent.getId());
+            requestNewAccessTokenIfNecessary(
+                signAndUploadBundlesEvent.getRuntimeConfig(),
+                signAndUploadBundlesEvent.getReplyTo(),
+                signAndUploadBundlesEvent.getId()
+            );
 
             List<List<Bundle>> listOfListOfBundles = signAndUploadBundlesEvent.listOfListOfBundles;
             log.info(String.format("Received %d bundles to sign ", listOfListOfBundles.size()));
@@ -187,52 +196,45 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
             });
 
             List<List<BundleWithAccessCodeOrThrowable>> bundleWithAccessCodeOrThrowable = new ArrayList<>();
-            List<Bundle> bundles = signAndUploadBundlesEvent.listOfListOfBundles.stream().flatMap(b -> b.stream()).collect(Collectors.toList());
-            if(bundles.size() == 0) {
+            List<Bundle> bundles = signAndUploadBundlesEvent.listOfListOfBundles.stream().flatMap(Collection::stream).collect(Collectors.toList());
+            if (bundles.isEmpty()) {
                 log.warning("No bundles to sign. Returning.");
                 exceptionEvent.fireAsync(new ArrayIndexOutOfBoundsException("No bundles to sign. Returning. Please see https://github.com/ere-health/ere-ps-app/blob/main/src/test/resources/websocket-messages/SignAndUploadBundles.json for an example message"));
                 return;
             }
-            log.info(String.format("Getting access codes for %d bundles.",
-                    bundles.size()));
+            log.info(String.format("Getting access codes for %d bundles.", bundles.size()));
 
-            List<BundleWithAccessCodeOrThrowable> unflatten = createMultipleERezeptsOnPrescriptionServer(bundles, signAndUploadBundlesEvent.getFlowtype(), signAndUploadBundlesEvent.getRuntimeConfig(), signAndUploadBundlesEvent.getReplyTo(), signAndUploadBundlesEvent.getId());
+            List<BundleWithAccessCodeOrThrowable> unflatten = createMultipleERezeptsOnPrescriptionServer(
+                bundles,
+                signAndUploadBundlesEvent.getFlowtype(),
+                signAndUploadBundlesEvent.getRuntimeConfig(),
+                signAndUploadBundlesEvent.getReplyTo(),
+                signAndUploadBundlesEvent.getId()
+            );
             Iterator<BundleWithAccessCodeOrThrowable> it = unflatten.iterator();
             // unflatten bundles again
-            for(int i = 0;i<listOfListOfBundles.size();i++) {
+            for (List<Bundle> listOfListOfBundle : listOfListOfBundles) {
                 List<BundleWithAccessCodeOrThrowable> unflattenBundles = new ArrayList<>();
-                for(int j=0;j<listOfListOfBundles.get(i).size(); j++) {
+                for (int j = 0; j < listOfListOfBundle.size(); j++) {
                     BundleWithAccessCodeOrThrowable next = it.next();
                     unflattenBundles.add(next);
                 }
-                bundleWithAccessCodeOrThrowable
-                        .add(unflattenBundles);
+                bundleWithAccessCodeOrThrowable.add(unflattenBundles);
             }
 
-            log.info(String.format("Firing event to create prescription receipts for %d bundles.",
-                    bundleWithAccessCodeOrThrowable.size()));
+            log.info(String.format("Firing event to create prescription receipts for %d bundles.", bundleWithAccessCodeOrThrowable.size()));
             BundlesWithAccessCodeEvent bundleWithAccessCode = new BundlesWithAccessCodeEvent(bundleWithAccessCodeOrThrowable, signAndUploadBundlesEvent.getReplyTo(), signAndUploadBundlesEvent.getId());
-            if("169".equals(signAndUploadBundlesEvent.getFlowtype())) {
+            if ("169".equals(signAndUploadBundlesEvent.getFlowtype())) {
                 bundleWithAccessCode.setFlowtype(signAndUploadBundlesEvent.getFlowtype());
                 bundleWithAccessCode.setToKimAddress(signAndUploadBundlesEvent.getToKimAddress());
                 bundleWithAccessCode.setKimConfigMap(signAndUploadBundlesEvent.getKimConfigMap());
                 bundleWithAccessCode.setNoteToPharmacy(signAndUploadBundlesEvent.getNoteToPharmacy());
             }
             bundlesWithAccessCodeEvent.fireAsync(bundleWithAccessCode);
-        } catch(Exception ex) {
+        } catch (Exception ex) {
             log.warning("Exception during onSignAndUploadBundlesEvent");
             exceptionEvent.fireAsync(ex);
-            return;
         }
-    }
-
-
-    public List<BundleWithAccessCodeOrThrowable> createMultipleERezeptsOnPrescriptionServer(List<Bundle> bundles) {
-        return createMultipleERezeptsOnPrescriptionServer(bundles, null, null, null);
-    }
-
-    public List<BundleWithAccessCodeOrThrowable> createMultipleERezeptsOnPrescriptionServer(List<Bundle> bundles, RuntimeConfig runtimeConfig) {
-        return createMultipleERezeptsOnPrescriptionServer(bundles, runtimeConfig, null, null);
     }
 
     /**
@@ -240,12 +242,23 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
      * <p>
      * When an error is thrown it create an object that contains this error.
      */
-    public List<BundleWithAccessCodeOrThrowable> createMultipleERezeptsOnPrescriptionServer(List<Bundle> bundles, RuntimeConfig runtimeConfig, Session replyTo, String replyToMessageId) {
+    @VisibleForTesting
+    public List<BundleWithAccessCodeOrThrowable> createMultipleERezeptsOnPrescriptionServer(
+        List<Bundle> bundles,
+        RuntimeConfig runtimeConfig,
+        Session replyTo,
+        String replyToMessageId
+    ) {
         return createMultipleERezeptsOnPrescriptionServer(bundles, "160", runtimeConfig, replyTo, replyToMessageId);
     }
 
-    public List<BundleWithAccessCodeOrThrowable> createMultipleERezeptsOnPrescriptionServer(List<Bundle> bundles,
-        String flowtype, RuntimeConfig runtimeConfig, Session replyTo, String replyToMessageId) {
+    public List<BundleWithAccessCodeOrThrowable> createMultipleERezeptsOnPrescriptionServer(
+        List<Bundle> bundles,
+        String flowtype,
+        RuntimeConfig runtimeConfig,
+        Session replyTo,
+        String replyToMessageId
+    ) {
         List<BundleWithAccessCodeOrThrowable> bundleWithAccessCodes = new ArrayList<>();
         List<Task> tasks = new ArrayList<>();
         for (Bundle bundle : bundles) {
@@ -253,18 +266,18 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
             try {
                 try {
                     // We have a PKV prescription
-                    if(flowtype.equals("160") &&
-                        bundle.getEntry().stream().filter(be -> be.getResource() instanceof Coverage)
-                            .map(be -> (Coverage)be.getResource())
-                                .filter(c -> c.getType().getCoding().stream()
-                                    .filter(coding -> coding.getCode().equals("PKV")).count() > 0).count() > 0) {
+                    boolean pkv = bundle.getEntry().stream().filter(be -> be.getResource() instanceof Coverage)
+                        .map(be -> (Coverage) be.getResource())
+                        .filter(c -> c.getType().getCoding().stream()
+                            .filter(coding -> coding.getCode().equals("PKV")).count() > 0
+                        ).count() > 0;
+                    if (flowtype.equals("160") && pkv) {
                         flowtype = "200";
                     }
-                } catch(Exception ex) {
+                } catch (Exception ex) {
                     log.log(Level.WARNING, "Could not determine flowtype", ex);
                 }
-                Task task = createERezeptTask(true, runtimeConfig, flowtype);
-                tasks.add(task);
+                tasks.add(createERezeptTask(true, runtimeConfig, flowtype));
                 bundleWithAccessCodes.add(new BundleWithAccessCodeOrThrowable());
             } catch (Throwable t) {
                 bundleWithAccessCodes.add(new BundleWithAccessCodeOrThrowable(t));
@@ -275,16 +288,17 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
         for (Task task : tasks) {
             // Example:
             // src/test/resources/gematik/Bundle-4fe2013d-ae94-441a-a1b1-78236ae65680.xml
-            if(task != null) {
+            if (task != null) {
                 try {
                     BundleWithAccessCodeOrThrowable bundleWithAccessCode = updateBundleWithTask(task, bundles.get(i));
                     bundleWithAccessCodes.get(i).setBundle(bundleWithAccessCode.getBundle());
                     bundleWithAccessCodes.get(i).setAccessCode(bundleWithAccessCode.getAccessCode());
-                } catch(Throwable t) {
+                } catch (Throwable t) {
+                    log.log(Level.WARNING, "Could not extract taskId and/or medicationRequest Id from Bundle", t);
                     bundleWithAccessCodes.get(i).setThrowable(t);
                 }
             } else {
-                if(bundleWithAccessCodes.get(i).getThrowable() == null) {
+                if (bundleWithAccessCodes.get(i).getThrowable() == null) {
                     bundleWithAccessCodes.get(i).setThrowable(new ERezeptWorkflowException("Task is null please check log for errors."));
                 }
             }
@@ -295,19 +309,25 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
         return bundleWithAccessCodes;
     }
 
-    void uploadSignedBundle(List<Bundle> bundles, RuntimeConfig runtimeConfig, Session replyTo, String replyToMessageId,
-            List<BundleWithAccessCodeOrThrowable> bundleWithAccessCodes, List<Task> tasks) {
+    void uploadSignedBundle(
+        List<Bundle> bundles,
+        RuntimeConfig runtimeConfig,
+        Session replyTo,
+        String replyToMessageId,
+        List<BundleWithAccessCodeOrThrowable> bundleWithAccessCodes,
+        List<Task> tasks
+    ) {
         int i;
         try {
-            List<SignResponse> signedDocuments = signBundleWithIdentifiers(bundles, false, runtimeConfig, replyTo, replyToMessageId);
+            List<SignResponse> signedDocuments = signBundleWithIdentifiers(bundles, false, runtimeConfig, replyTo, replyToMessageId, true);
             i = 0;
-            for(BundleWithAccessCodeOrThrowable bundleWithAccessCode : bundleWithAccessCodes) {
+            for (BundleWithAccessCodeOrThrowable bundleWithAccessCode : bundleWithAccessCodes) {
                 // find correct signed document
                 SignResponse signedDocument = signedDocuments.stream().filter((sd) -> {
-                    if(bundleWithAccessCode.getBundle() != null) {
-                        if(bundleWithAccessCode.getBundle().getIdentifier() != null) {
+                    if (bundleWithAccessCode.getBundle() != null) {
+                        if (bundleWithAccessCode.getBundle().getIdentifier() != null) {
                             return sd.getRequestID().equals(bundleWithAccessCode.getBundle().getIdentifier().getValue());
-                        } else if(bundleWithAccessCode.getBundle().getId() != null) {
+                        } else if (bundleWithAccessCode.getBundle().getId() != null) {
                             return sd.getRequestID().equals(bundleWithAccessCode.getBundle().getId());
                         } else {
                             return false;
@@ -316,9 +336,9 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
                         return false;
                     }
                 }).findFirst().orElse(null);
-                if(signedDocument == null) {
-                    log.warning("Was not able to find a signedDocument for: "+(bundleWithAccessCode.getBundle() != null ? bundleWithAccessCode.getBundle().getId() : "null"));
-                    if(signedDocuments.size() > i) {
+                if (signedDocument == null) {
+                    log.warning("Was not able to find a signedDocument for: " + (bundleWithAccessCode.getBundle() != null ? bundleWithAccessCode.getBundle().getId() : "null"));
+                    if (signedDocuments.size() > i) {
                         log.warning("Using first one.");
                         signedDocument = signedDocuments.get(i);
                     } else {
@@ -328,30 +348,21 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
                 }
                 try {
                     Task task = tasks.get(i);
-                    if(task != null && signedDocument.getSignatureObject() != null && signedDocument.getSignatureObject().getBase64Signature() != null) {
+                    if (task != null && signedDocument.getSignatureObject() != null && signedDocument.getSignatureObject().getBase64Signature() != null) {
                         byte[] signedBundle = signedDocument.getSignatureObject().getBase64Signature().getValue();
                         bundleWithAccessCode.setSignedBundle(signedBundle);
-                        updateERezeptTask(task, bundleWithAccessCode.getAccessCode(),
-                            signedBundle, runtimeConfig);
+                        String taskId = task.getIdElement().getIdPart();
+                        String accessCode = bundleWithAccessCode.getAccessCode();
+                        updateERezeptTask(taskId, accessCode, signedBundle, true, runtimeConfig, null, null);
                     }
-                } catch(Throwable t) {
+                } catch (Throwable t) {
                     bundleWithAccessCode.setThrowable(t);
                 }
                 i++;
             }
-        } catch(Throwable t) {
-            bundleWithAccessCodes.stream().forEach(bundleWithAccessCode -> bundleWithAccessCode.setThrowable(t));
+        } catch (Throwable t) {
+            bundleWithAccessCodes.forEach(bundleWithAccessCode -> bundleWithAccessCode.setThrowable(t));
         }
-    }
-
-    public BundleWithAccessCodeOrThrowable createERezeptOnPrescriptionServer(Bundle bundle)
-            throws ERezeptWorkflowException {
-        return createERezeptOnPrescriptionServer(bundle, null, null, null);
-    }
-    
-    public BundleWithAccessCodeOrThrowable createERezeptOnPrescriptionServer(Bundle bundle, RuntimeConfig runtimeConfig)
-            throws ERezeptWorkflowException {
-        return createERezeptOnPrescriptionServer(bundle, runtimeConfig, null, null);
     }
 
     /**
@@ -359,60 +370,54 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
      * has to be called multiple times
      * <p>
      * This function takes a bundle e.g.
-     * https://github.com/ere-health/ere-ps-app/blob/main/src/test/resources/simplifier_erezept/0428d416-149e-48a4-977c-394887b3d85c.xml
-     *
-     * @return
-     * @throws ERezeptWorkflowException
+     * <a href="https://github.com/ere-health/ere-ps-app/blob/main/src/test/resources/simplifier_erezept/0428d416-149e-48a4-977c-394887b3d85c.xml">...</a>
      */
-    public BundleWithAccessCodeOrThrowable createERezeptOnPrescriptionServer(Bundle bundle, RuntimeConfig runtimeConfig, Session replyTo, String replyToMessageId)
-            throws ERezeptWorkflowException {
+    public BundleWithAccessCodeOrThrowable createERezeptOnPrescriptionServer(
+        Bundle bundle,
+        RuntimeConfig runtimeConfig,
+        Session replyTo,
+        String replyToMessageId
+    ) throws ERezeptWorkflowException {
         requestNewAccessTokenIfNecessary(runtimeConfig, replyTo, replyToMessageId);
-        
+
         log.fine("Bearer Token: " + bearerToken.get(runtimeConfig));
 
         // Example: src/test/resources/gematik/Task-4711.xml
-        Task task = createERezeptTask(runtimeConfig);
+        Task task = createERezeptTask(true, runtimeConfig, "160");
 
         // Example:
         // src/test/resources/gematik/Bundle-4fe2013d-ae94-441a-a1b1-78236ae65680.xml
         BundleWithAccessCodeOrThrowable bundleWithAccessCode = updateBundleWithTask(task, bundle);
-        SignResponse signedDocument = signBundleWithIdentifiers(bundleWithAccessCode.getBundle(), runtimeConfig, replyTo, replyToMessageId);
+        SignResponse signedDocument = signBundleWithIdentifiers(bundleWithAccessCode.getBundle(), false, runtimeConfig, replyTo, replyToMessageId);
         try {
-            if(signedDocument == null) {
+            if (signedDocument == null) {
                 bundleWithAccessCode.setThrowable(new RuntimeException("Could not get signed document. Please check the logs."));
             } else {
                 byte[] signedBundle = signedDocument.getSignatureObject().getBase64Signature().getValue();
                 bundleWithAccessCode.setSignedBundle(signedBundle);
-                updateERezeptTask(task.getIdElement().getIdPart(), bundleWithAccessCode.getAccessCode(),
-                    signedBundle, true, runtimeConfig, replyTo, replyToMessageId);
+                String taskId = task.getIdElement().getIdPart();
+                String accessCode = bundleWithAccessCode.getAccessCode();
+                updateERezeptTask(taskId, accessCode, signedBundle, true, runtimeConfig, replyTo, replyToMessageId);
             }
-        } catch(Exception e) {
+        } catch (Exception e) {
             bundleWithAccessCode.setThrowable(e);
         }
 
         return bundleWithAccessCode;
     }
 
-    public void updateERezeptTask(Task task, String accessCode, byte[] signedBytes){
-        updateERezeptTask(task.getIdElement().getIdPart(), accessCode, signedBytes, null);
-    }
-
-    public void updateERezeptTask(Task task, String accessCode, byte[] signedBytes, RuntimeConfig runtimeConfig) {
-        updateERezeptTask(task.getIdElement().getIdPart(), accessCode, signedBytes, runtimeConfig);
-    }
-
-    public void updateERezeptTask(String taskId, String accessCode, byte[] signedBytes, RuntimeConfig runtimeConfig) {
-        updateERezeptTask(taskId, accessCode, signedBytes, true, runtimeConfig);
-    }
-
-    public void updateERezeptTask(String taskId, String accessCode, byte[] signedBytes, boolean firstTry, RuntimeConfig runtimeConfig) {
-        updateERezeptTask(taskId, accessCode, signedBytes, firstTry, runtimeConfig, null, null);
-    }
-
     /**
      * This function adds the E-Rezept to the previously created task.
      */
-    public void updateERezeptTask(String taskId, String accessCode, byte[] signedBytes, boolean firstTry, RuntimeConfig runtimeConfig, Session replyTo, String replyToMessageId) {
+    public void updateERezeptTask(
+        String taskId,
+        String accessCode,
+        byte[] signedBytes,
+        boolean firstTry,
+        RuntimeConfig runtimeConfig,
+        Session replyTo,
+        String replyToMessageId
+    ) {
         requestNewAccessTokenIfNecessary(runtimeConfig, replyTo, replyToMessageId);
         Parameters parameters = new Parameters();
         ParametersParameterComponent ePrescriptionParameter = new ParametersParameterComponent();
@@ -422,20 +427,23 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
         binary.setContent(signedBytes);
         ePrescriptionParameter.setResource(binary);
         parameters.addParameter(ePrescriptionParameter);
+        String entity = fhirContext.newXmlParser().encodeResourceToString(parameters);
 
-        try (Response response = client.target(appConfig.getPrescriptionServiceURL()).path("/Task")
-                .path("/" + taskId).path("/$activate").request()
-                .header("User-Agent", appConfig.getUserAgent())
-                .header("Authorization", "Bearer " + bearerToken.get(runtimeConfig)).header("X-AccessCode", accessCode)
-                .post(Entity.entity(fhirContext.newXmlParser().encodeResourceToString(parameters),
-                        "application/fhir+xml; charset=utf-8"))) {
+        try (Response response = client.target(appConfig.getPrescriptionServiceURL())
+            .path("/Task/" + taskId)
+            .path("/$activate")
+            .request()
+            .header("User-Agent", appConfig.getUserAgent())
+            .header("Authorization", "Bearer " + bearerToken.get(runtimeConfig))
+            .header("X-AccessCode", accessCode)
+            .post(Entity.entity(entity, "application/fhir+xml; charset=utf-8"))) {
 
-            String taskString = new String(response.readEntity(java.io.InputStream.class).readAllBytes(), "ISO-8859-1");
+            String taskString = new String(response.readEntity(InputStream.class).readAllBytes(), ISO_8859_1);
             log.fine("Response when trying to activate the task: " + taskString);
 
             if (Response.Status.Family.familyOf(response.getStatus()) != Response.Status.Family.SUCCESSFUL) {
-                if(firstTry) {
-                    log.warning("Was not able to $activate on first try. Status:" +response.getStatus()+" Response: " + taskString);
+                if (firstTry) {
+                    log.warning("Was not able to $activate on first try. Status:" + response.getStatus() + " Response: " + taskString);
                     updateERezeptTask(taskId, accessCode, signedBytes, false, runtimeConfig, replyTo, replyToMessageId);
                 } else {
                     Response.ResponseBuilder responseBuilder = Response.status(response.getStatus());
@@ -452,9 +460,6 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
 
     /**
      * Adds the identifiers to the bundle.
-     *
-     * @param task
-     * @param bundle
      */
     public static BundleWithAccessCodeOrThrowable updateBundleWithTask(Task task, Bundle bundle) {
         Identifier prescriptionID = getPrescriptionIdentifier(task);
@@ -462,10 +467,13 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
         identifier.setUse(null);
         try {
             // This bundle uses the old KBV profile
-            if(bundle.getMeta() != null && bundle.getMeta().getProfile() != null && bundle.getMeta().getProfile().stream().filter(pf -> pf.getValue().equals("https://fhir.kbv.de/StructureDefinition/KBV_PR_ERP_Bundle|1.0.2")).count() > 0) {
+            if (bundle.getMeta() != null
+                && bundle.getMeta().getProfile() != null
+                && bundle.getMeta().getProfile().stream().filter(pf ->
+                pf.getValue().equals("https://fhir.kbv.de/StructureDefinition/KBV_PR_ERP_Bundle|1.0.2")).count() > 0) {
                 identifier.setSystem(EREZEPT_IDENTIFIER_SYSTEM);
             }
-        } catch(Exception ex) {
+        } catch (Exception ex) {
             log.log(Level.WARNING, "Could not identify profile", ex);
         }
         bundle.setIdentifier(identifier);
@@ -475,35 +483,34 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
     }
 
     static String getPrescriptionId(Task task) {
-        String prescriptionID = getPrescriptionIdentifier(task).getValue();
-        return prescriptionID;
+        return getPrescriptionIdentifier(task).getValue();
     }
 
     static Identifier getPrescriptionIdentifier(Task task) {
         return task.getIdentifier().stream()
-                .filter(id -> id.getSystem().equals(EREZEPT_IDENTIFIER_SYSTEM) ||
+            .filter(id -> id.getSystem().equals(EREZEPT_IDENTIFIER_SYSTEM) ||
                 id.getSystem().equals(ERezeptWorkflowService.EREZEPT_IDENTIFIER_SYSTEM_GEM)).findFirst().orElse(new Identifier());
     }
 
     public SignResponse signBundleWithIdentifiers(Bundle bundle) throws ERezeptWorkflowException {
-        return signBundleWithIdentifiers(bundle, null, null, null);
+        return signBundleWithIdentifiers(bundle, false, null, null, null);
     }
 
-    public SignResponse signBundleWithIdentifiers(Bundle bundle, RuntimeConfig runtimeConfig, Session replyTo, String replyToMessageId) throws ERezeptWorkflowException {
-        return signBundleWithIdentifiers(bundle, false, runtimeConfig, replyTo, replyToMessageId);
-    }
-
-    public SignResponse signBundleWithIdentifiers(Bundle bundle, boolean wait10secondsAfterJobNumber) throws ERezeptWorkflowException {
-        return signBundleWithIdentifiers(bundle, wait10secondsAfterJobNumber, null);
-    }
-
-    public SignResponse signBundleWithIdentifiers(Bundle bundle, boolean wait10secondsAfterJobNumber, RuntimeConfig runtimeConfig) throws ERezeptWorkflowException  {
-        return signBundleWithIdentifiers(bundle, wait10secondsAfterJobNumber, runtimeConfig, null, null);
-    }
-
-    public SignResponse signBundleWithIdentifiers(Bundle bundle, boolean wait10secondsAfterJobNumber, RuntimeConfig runtimeConfig, Session replyTo, String replyToMessageId)
-            throws ERezeptWorkflowException {
-        List<SignResponse> signResponses = signBundleWithIdentifiers(Arrays.asList(bundle), wait10secondsAfterJobNumber, runtimeConfig, replyTo, replyToMessageId);
+    public SignResponse signBundleWithIdentifiers(
+        Bundle bundle,
+        boolean wait10secondsAfterJobNumber,
+        RuntimeConfig runtimeConfig,
+        Session replyTo,
+        String replyToMessageId
+    ) throws ERezeptWorkflowException {
+        List<SignResponse> signResponses = signBundleWithIdentifiers(
+            List.of(bundle),
+            wait10secondsAfterJobNumber,
+            runtimeConfig,
+            replyTo,
+            replyToMessageId,
+            true
+        );
         try {
             return signResponses.get(0);
         } catch (Exception e) {
@@ -511,32 +518,19 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
         }
     }
 
-    public List<SignResponse> signBundleWithIdentifiers(List<Bundle> bundles, boolean wait10secondsAfterJobNumber)
-        throws ERezeptWorkflowException{
-        return signBundleWithIdentifiers(bundles, wait10secondsAfterJobNumber, null);
-    }
-
-    public List<SignResponse> signBundleWithIdentifiers(List<Bundle> bundles, boolean wait10secondsAfterJobNumber, RuntimeConfig runtimeConfig)
-            throws ERezeptWorkflowException {
-        return signBundleWithIdentifiers(bundles, wait10secondsAfterJobNumber, runtimeConfig, null, null);
-    }
-
-
-    public List<SignResponse> signBundleWithIdentifiers(List<Bundle> bundles, boolean wait10secondsAfterJobNumber, RuntimeConfig runtimeConfig, Session replyTo, String replyToMessageId)
-            throws ERezeptWorkflowException {
-        return signBundleWithIdentifiers(bundles, wait10secondsAfterJobNumber, runtimeConfig, replyTo, replyToMessageId, true);
-    }
     /**
      * This function signs the bundle with the signatureService.signDocument from
      * the connector.
-     *
-     * @return
-     * @throws ERezeptWorkflowException
      */
-    public List<SignResponse> signBundleWithIdentifiers(List<Bundle> bundles, boolean wait10secondsAfterJobNumber, RuntimeConfig runtimeConfig, Session replyTo, String replyToMessageId, boolean firstTry)
-            throws ERezeptWorkflowException {
-
-        List<SignResponse> signResponses = null;
+    public List<SignResponse> signBundleWithIdentifiers(
+        List<Bundle> bundles,
+        boolean wait10secondsAfterJobNumber,
+        RuntimeConfig runtimeConfig,
+        Session replyTo,
+        String replyToMessageId,
+        boolean firstTry
+    ) throws ERezeptWorkflowException {
+        List<SignResponse> signResponses;
 
         if (runtimeConfig != null && runtimeConfig.isSendPreview()) {
             readyToSignBundlesEvent.fireAsync(new ReadyToSignBundlesEvent(bundles, replyTo, replyToMessageId));
@@ -546,13 +540,13 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
             OptionalInputs optionalInputs = new OptionalInputs();
             optionalInputs.setSignatureType("urn:ietf:rfc:5652");
             optionalInputs.setIncludeEContent(true);
-            
+
             List<SignRequest> signRequests = bundles.stream().map(bundle -> {
                 byte[] canonXmlBytes;
                 try {
                     canonXmlBytes = getCanonicalXmlBytes(bundle);
                 } catch (InvalidCanonicalizerException | XMLParserException | CanonicalizationException
-                        | IOException e) {
+                         | IOException e) {
                     log.log(Level.SEVERE, "Could not get canonical XML", e);
                     exceptionEvent.fireAsync(new ExceptionWithReplyToException(e, replyTo, replyToMessageId));
                     return null;
@@ -565,9 +559,9 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
                 base64Data.setValue(canonXmlBytes);
                 document.setBase64Data(base64Data);
                 signRequest.setOptionalInputs(optionalInputs);
-                if(bundle.getIdentifier() != null) {
+                if (bundle.getIdentifier() != null) {
                     signRequest.setRequestID(bundle.getIdentifier().getValue());
-                } else if(bundle.getId() != null) {
+                } else if (bundle.getId() != null) {
                     signRequest.setRequestID(bundle.getId());
                 } else {
                     bundle.setId(UUID.randomUUID().toString());
@@ -581,7 +575,7 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
             if (wait10secondsAfterJobNumber) {
                 // Wait 10 seconds to start titus test case
                 log.info(
-                        "Waiting 10 seconds. Please enable titus test case on https://frontend.titus.ti-dienste.de/#/erezept/vps/testsuiterun");
+                    "Waiting 10 seconds. Please enable titus test case on https://frontend.titus.ti-dienste.de/#/erezept/vps/testsuiterun");
                 try {
                     Thread.sleep(1000 * 10);
                 } catch (InterruptedException e) {
@@ -589,6 +583,11 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
                 }
             }
             String signatureServiceCardHandle = getSignatureServiceCardHandle(runtimeConfig);
+            String tvMode = runtimeConfig != null && runtimeConfig.getTvMode() != null
+                ? runtimeConfig.getTvMode()
+                : userConfig.getTvMode();
+
+            ContextType contextType = connectorServicesProvider.getContextType(runtimeConfig);
             if ("PTV4+".equals(runtimeConfig != null && runtimeConfig.getConnectorVersion() != null ? runtimeConfig.getConnectorVersion() : userConfig.getConnectorVersion())) {
                 List<de.gematik.ws.conn.signatureservice.v7_5_5.SignRequest> signRequestsV755 = signRequests.stream().map(signRequest -> {
                     de.gematik.ws.conn.signatureservice.v7_5_5.SignRequest signRequestV755 = new de.gematik.ws.conn.signatureservice.v7_5_5.SignRequest();
@@ -606,33 +605,42 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
                 }).collect(Collectors.toList());
 
                 List<de.gematik.ws.conn.signatureservice.v7_5_5.SignResponse> signResponsesV755;
-                ContextType contextType = connectorServicesProvider.getContextType(runtimeConfig);
-                if(runtimeConfig != null && runtimeConfig.getUserId() != null && !"".equals(runtimeConfig.getUserId())) {
+                if (runtimeConfig != null && runtimeConfig.getUserId() != null && !"".equals(runtimeConfig.getUserId())) {
                     contextType.setUserId(runtimeConfig.getUserId());
                 } else {
-                    if(userIdForComfortSignature != null) {
+                    if (userIdForComfortSignature != null) {
                         contextType.setUserId(userIdForComfortSignature);
                     }
                 }
                 // if we don't have a user id, generate one
-                if(contextType.getUserId() == null || "".equals(contextType.getUserId())) {
+                if (contextType.getUserId() == null || "".equals(contextType.getUserId())) {
                     contextType.setUserId(UUID.randomUUID().toString());
                 }
-                if(appConfig.enableBatchSign()) {
-                    String jobNumber = connectorServicesProvider.getSignatureServicePortTypeV755(runtimeConfig).getJobNumber(connectorServicesProvider.getContextType(runtimeConfig));
-            
-                    signResponsesV755 = connectorServicesProvider.getSignatureServicePortTypeV755(runtimeConfig).signDocument(signatureServiceCardHandle,
-                            appConfig.getConnectorCrypt(),contextType, (runtimeConfig != null && runtimeConfig.getTvMode() != null) ? runtimeConfig.getTvMode() : userConfig.getTvMode(),
-                            jobNumber, signRequestsV755);
+                SignatureServicePortTypeV755 signatureServicePortTypeV755 = connectorServicesProvider.getSignatureServicePortTypeV755(runtimeConfig);
+                if (appConfig.enableBatchSign()) {
+                    String jobNumber = signatureServicePortTypeV755.getJobNumber(contextType);
+                    signResponsesV755 = signatureServicePortTypeV755.signDocument(
+                        signatureServiceCardHandle,
+                        appConfig.getConnectorCrypt(),
+                        contextType,
+                        tvMode,
+                        jobNumber,
+                        signRequestsV755
+                    );
                 } else {
                     signResponsesV755 = signRequestsV755.stream().map(signRequestV755 -> {
                         String jobNumber;
                         try {
-                            jobNumber = connectorServicesProvider.getSignatureServicePortTypeV755(runtimeConfig).getJobNumber(connectorServicesProvider.getContextType(runtimeConfig));
-                            
-                            List<de.gematik.ws.conn.signatureservice.v7_5_5.SignResponse> list = connectorServicesProvider.getSignatureServicePortTypeV755(runtimeConfig).signDocument(signatureServiceCardHandle,
-                            appConfig.getConnectorCrypt(), contextType, (runtimeConfig != null && runtimeConfig.getTvMode() != null) ? runtimeConfig.getTvMode() : userConfig.getTvMode(),
-                            jobNumber, Arrays.asList(signRequestV755));
+                            jobNumber = signatureServicePortTypeV755.getJobNumber(contextType);
+
+                            List<de.gematik.ws.conn.signatureservice.v7_5_5.SignResponse> list = signatureServicePortTypeV755.signDocument(
+                                signatureServiceCardHandle,
+                                appConfig.getConnectorCrypt(),
+                                contextType,
+                                tvMode,
+                                jobNumber,
+                                Arrays.asList(signRequestV755)
+                            );
                             return list.get(0);
                         } catch (FaultMessage e) {
                             exceptionEvent.fireAsync(new ExceptionWithReplyToException(e, replyTo, replyToMessageId));
@@ -641,8 +649,8 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
                     }).collect(Collectors.toList());
                 }
 
-                List<SignResponse> signResponses744 = signResponsesV755.stream().map(signResponseV755 -> {
-                    if(signResponseV755 != null) {
+                signResponses = signResponsesV755.stream().map(signResponseV755 -> {
+                    if (signResponseV755 != null) {
                         SignResponse signResponse744 = new SignResponse();
                         signResponse744.setRequestID(signResponseV755.getRequestID());
                         signResponse744.setSignatureObject(signResponseV755.getSignatureObject());
@@ -651,31 +659,38 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
                     }
                     return null;
                 }).collect(Collectors.toList());
-
-                signResponses = signResponses744;
                 // PTV4, could be PTV3 as well, to be refactored in a future task
             } else {
-                if(appConfig.enableBatchSign()) {
-                    signResponses = connectorServicesProvider.getSignatureServicePortType(runtimeConfig).signDocument(signatureServiceCardHandle,
-                            connectorServicesProvider.getContextType(runtimeConfig), (runtimeConfig != null && runtimeConfig.getTvMode() != null) ? runtimeConfig.getTvMode() : userConfig.getTvMode(),
-                            connectorServicesProvider.getSignatureServicePortType(runtimeConfig).getJobNumber(connectorServicesProvider.getContextType(runtimeConfig)), signRequests);
-                 } else {
-                    signResponses = signRequests.stream().map(signRequest-> {
+                SignatureServicePortTypeV740 signatureServicePortType = connectorServicesProvider.getSignatureServicePortType(runtimeConfig);
+                if (appConfig.enableBatchSign()) {
+                    signResponses = signatureServicePortType.signDocument(
+                        signatureServiceCardHandle,
+                        contextType,
+                        tvMode,
+                        signatureServicePortType.getJobNumber(contextType),
+                        signRequests
+                    );
+                } else {
+                    signResponses = signRequests.stream().map(signRequest -> {
                         List<SignResponse> list;
                         try {
-                            list = connectorServicesProvider.getSignatureServicePortType(runtimeConfig).signDocument(signatureServiceCardHandle,
-                            connectorServicesProvider.getContextType(runtimeConfig), (runtimeConfig != null && runtimeConfig.getTvMode() != null) ? runtimeConfig.getTvMode() : userConfig.getTvMode(),
-                            connectorServicesProvider.getSignatureServicePortType(runtimeConfig).getJobNumber(connectorServicesProvider.getContextType(runtimeConfig)), Arrays.asList(signRequest));
+                            list = signatureServicePortType.signDocument(
+                                signatureServiceCardHandle,
+                                contextType,
+                                tvMode,
+                                signatureServicePortType.getJobNumber(contextType),
+                                Arrays.asList(signRequest)
+                            );
                         } catch (FaultMessage e) {
                             exceptionEvent.fireAsync(new ExceptionWithReplyToException(e, replyTo, replyToMessageId));
                             return null;
                         }
                         return list.get(0);
                     }).collect(Collectors.toList());
-                 } 
+                }
             }
         } catch (ConnectorCardsException | FaultMessage e) {
-            if(firstTry && appConfig.isRetry()) {
+            if (firstTry && appConfig.isRetry()) {
                 log.log(Level.WARNING, "Exception signing bundles with identifiers on first try.", e);
                 return signBundleWithIdentifiers(bundles, wait10secondsAfterJobNumber, runtimeConfig, replyTo, replyToMessageId, false);
             } else {
@@ -683,15 +698,15 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
             }
         }
 
-        if(appConfig.isWriteSignatureFile()) {
+        if (appConfig.isWriteSignatureFile()) {
             String thisMoment = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH_mm_ssX")
-                                .withZone(ZoneOffset.UTC)
-                                .format(Instant.now());
-            for(int i = 0; i<signResponses.size();i++) {
+                .withZone(ZoneOffset.UTC)
+                .format(Instant.now());
+            for (int i = 0; i < signResponses.size(); i++) {
                 byte[] sig = signResponses.get(i).getSignatureObject().getBase64Signature().getValue();
                 try {
-                    Path path = Paths.get(thisMoment+"-"+i+".p7s");
-                    log.info("Generating "+path.toAbsolutePath().toString());
+                    Path path = Paths.get(thisMoment + "-" + i + ".p7s");
+                    log.info("Generating " + path.toAbsolutePath().toString());
                     Files.write(path, sig);
                 } catch (IOException e) {
                     log.log(Level.SEVERE, "Could not generate signature files", e);
@@ -709,23 +724,16 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
 
     /**
      * Gets the canonical XML for the bundle using ALGO_ID_C14N11_OMIT_COMMENTS.
-     * 
-     * @param bundle
-     * @return
-     * @throws InvalidCanonicalizerException
-     * @throws XMLParserException
-     * @throws IOException
-     * @throws CanonicalizationException
      */
     public static byte[] getCanonicalXmlBytes(Bundle bundle)
-            throws InvalidCanonicalizerException, XMLParserException, IOException, CanonicalizationException {
+        throws InvalidCanonicalizerException, XMLParserException, IOException, CanonicalizationException {
         String bundleXml = fhirContext.newXmlParser().encodeResourceToString(bundle);
 
         log.fine(bundleXml);
 
         Canonicalizer canon = Canonicalizer.getInstance(Canonicalizer.ALGO_ID_C14N11_OMIT_COMMENTS);
         ByteArrayOutputStream baos = new ByteArrayOutputStream();
-        canon.canonicalize(bundleXml.getBytes("UTF-8"), baos, false);
+        canon.canonicalize(bundleXml.getBytes(UTF_8), baos, false);
         byte[] canonXmlBytes = baos.toByteArray();
 
         String canonicalByteString = new String(canonXmlBytes);
@@ -733,29 +741,9 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
         return canonXmlBytes;
     }
 
-    public Task createERezeptTask() {
-        return createERezeptTask(null);
-    }
-
-    public Task createERezeptTask(RuntimeConfig runtimeConfig) {
-        return createERezeptTask(true, runtimeConfig);
-    }
-
     /**
      * This function creates an empty task based on workflow 160 (Muster 16) on the
      * prescription server.
-     *
-     * @return
-     */
-    public Task createERezeptTask(boolean firstTry, RuntimeConfig runtimeConfig) {
-        return createERezeptTask(firstTry, runtimeConfig, "160");
-    }
-
-    /**
-     * This function creates an empty task based on workflow 160 (Muster 16) on the
-     * prescription server.
-     *
-     * @return
      */
     public Task createERezeptTask(boolean firstTry, RuntimeConfig runtimeConfig, String flowtype) {
         requestNewAccessTokenIfNecessary(runtimeConfig, null, null);
@@ -774,14 +762,14 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
         log.fine("Parameter String: " + parameterString);
 
         try (Response response = client.target(appConfig.getPrescriptionServiceURL()).path("/Task/$create").request()
-                .header("User-Agent", appConfig.getUserAgent())
-                .header("Authorization", "Bearer " + bearerToken.get(runtimeConfig))
-                .post(Entity.entity(parameterString, "application/fhir+xml; charset=utf-8"))) {
+            .header("User-Agent", appConfig.getUserAgent())
+            .header("Authorization", "Bearer " + bearerToken.get(runtimeConfig))
+            .post(Entity.entity(parameterString, "application/fhir+xml; charset=utf-8"))) {
 
             String taskString = response.readEntity(String.class);
 
             // if this was the first try, try again, this will request a new bearer token
-            if(firstTry && appConfig.isRetry() && response.getStatus() == 401) {
+            if (firstTry && appConfig.isRetry() && response.getStatus() == 401) {
                 log.warning("401 when trying to create e prescription. Retrying.");
                 return createERezeptTask(false, runtimeConfig, flowtype);
             }
@@ -803,14 +791,16 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
     /**
      * This function creates an empty task based on workflow 160 (Muster 16) on the
      * prescription server.
-     *
-     * @return
      */
     public void abortERezeptTask(RuntimeConfig runtimeConfig, String taskId, String accessCode) {
         requestNewAccessTokenIfNecessary(runtimeConfig, null, null);
-        try (Response response = client.target(appConfig.getPrescriptionServiceURL()).path("/Task").path("/" + taskId).path("/$abort")
-                .request().header("User-Agent", appConfig.getUserAgent()).header("Authorization", "Bearer " + bearerToken.get(runtimeConfig)).header("X-AccessCode", accessCode)
-                .post(Entity.entity("", "application/fhir+xml; charset=utf-8"))) {
+        String url = appConfig.getPrescriptionServiceURL();
+        try (Response response = client.target(url).path("/Task").path("/" + taskId).path("/$abort")
+            .request()
+            .header("User-Agent", appConfig.getUserAgent())
+            .header("Authorization", "Bearer " + bearerToken.get(runtimeConfig))
+            .header("X-AccessCode", accessCode)
+            .post(Entity.entity("", "application/fhir+xml; charset=utf-8"))) {
             String taskString = response.readEntity(String.class);
             // if it is not successful
             if (Response.Status.Family.familyOf(response.getStatus()) != Response.Status.Family.SUCCESSFUL) {
@@ -818,13 +808,14 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
                 responseBuilder.entity(taskString);
                 throw new WebApplicationException(responseBuilder.build());
             }
-            
+
             log.info("Task $abort Response: " + taskString);
         }
     }
 
     /**
      * Is executed when an abortTasksEvent is received
+     *
      * @param abortTasksEvent event that contains the task to abort
      */
     public void onAbortTasksEvent(@ObservesAsync AbortTasksEvent abortTasksEvent) {
@@ -853,15 +844,14 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
         String userId = activateComfortSignature(activateComfortSignatureEvent.getRuntimeConfig(), activateComfortSignatureEvent.getReplyTo(), activateComfortSignatureEvent.getId());
         try {
             onGetSignatureModeEvent(new GetSignatureModeEvent(activateComfortSignatureEvent.getReplyTo(), activateComfortSignatureEvent.getId()), userId, true);
-        } catch(Exception e) {
+        } catch (Exception e) {
             log.log(Level.WARNING, "Could not get signature mode", e);
             exceptionEvent.fireAsync(new ExceptionWithReplyToException(e, activateComfortSignatureEvent.getReplyTo(), activateComfortSignatureEvent.getReplyToMessageId()));
         }
     }
 
-
-    public String activateComfortSignature() {
-        return activateComfortSignature(null);
+    public void activateComfortSignature() {
+        activateComfortSignature(null);
     }
 
     /**
@@ -870,21 +860,20 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
     public String activateComfortSignature(RuntimeConfig runtimeConfig) {
         return activateComfortSignature(runtimeConfig, null, null);
     }
+
     /**
      * Activate comfort signature
      */
     public String activateComfortSignature(RuntimeConfig runtimeConfig, Session replyTo, String replyToMessageId) {
         final Holder<Status> status = new Holder<>();
         final Holder<SignatureModeEnum> signatureMode = new Holder<>();
-        String signatureServiceCardHandle = null;
-
         try {
             userIdForComfortSignature = UUID.randomUUID().toString();
             ContextType contextType = connectorServicesProvider.getContextType(runtimeConfig);
             contextType.setUserId(userIdForComfortSignature);
-            signatureServiceCardHandle = getSignatureServiceCardHandle(runtimeConfig);
-            connectorServicesProvider.getSignatureServicePortTypeV755(runtimeConfig).activateComfortSignature(signatureServiceCardHandle, contextType,
-                    status, signatureMode);
+            String signatureServiceCardHandle = getSignatureServiceCardHandle(runtimeConfig);
+            SignatureServicePortTypeV755 signatureServicePortTypeV755 = connectorServicesProvider.getSignatureServicePortTypeV755(runtimeConfig);
+            signatureServicePortTypeV755.activateComfortSignature(signatureServiceCardHandle, contextType, status, signatureMode);
         } catch (Exception e) {
             log.log(Level.WARNING, "Could not enable comfort signature", e);
             exceptionEvent.fireAsync(new ExceptionWithReplyToException(e, replyTo, replyToMessageId));
@@ -893,16 +882,15 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
     }
 
     private String getSignatureServiceCardHandle(RuntimeConfig runtimeConfig) throws ConnectorCardsException {
-        String signatureServiceCardHandle;
-        signatureServiceCardHandle = (runtimeConfig != null && runtimeConfig.getEHBAHandle() != null) ? runtimeConfig.getEHBAHandle() : connectorCardsService.getConnectorCardHandle( 
-                ConnectorCardsService.CardHandleType.HBA, runtimeConfig);
-        return signatureServiceCardHandle;
+        return (runtimeConfig != null && runtimeConfig.getEHBAHandle() != null)
+            ? runtimeConfig.getEHBAHandle()
+            : connectorCardsService.getConnectorCardHandle(HBA, runtimeConfig);
     }
 
     public void onGetSignatureModeEvent(@ObservesAsync GetSignatureModeEvent getSignatureModeEvent) {
         try {
             onGetSignatureModeEvent(getSignatureModeEvent, null);
-        } catch(Exception e) {
+        } catch (Exception e) {
             log.log(Level.WARNING, "Could not get signature mode", e);
             exceptionEvent.fireAsync(new ExceptionWithReplyToException(e, getSignatureModeEvent.getReplyTo(), getSignatureModeEvent.getReplyToMessageId()));
         }
@@ -918,8 +906,8 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
     public void onGetSignatureModeEvent(GetSignatureModeEvent getSignatureModeEvent, String userId, boolean answertToActivateComfortSignature) {
         try {
             GetSignatureModeResponseEvent getSignatureModeResponseEvent = getSignatureMode(getSignatureModeEvent.getRuntimeConfig(), getSignatureModeEvent.getReplyTo(), getSignatureModeEvent.getId());
-            if(getSignatureModeResponseEvent != null) {
-                if(getSignatureModeEvent != null) {
+            if (getSignatureModeResponseEvent != null) {
+                if (getSignatureModeEvent != null) {
                     getSignatureModeResponseEvent.setReplyTo(getSignatureModeEvent.getReplyTo());
                     getSignatureModeResponseEvent.setReplyToMessageId(getSignatureModeEvent.getId());
                 }
@@ -933,15 +921,12 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
         }
     }
 
-    public GetSignatureModeResponseEvent getSignatureMode() {
-        return getSignatureMode(null, null, null);
+    public void getSignatureMode() {
+        getSignatureMode(null, null, null);
     }
 
-    /**
-     *
-     */
     public GetSignatureModeResponseEvent getSignatureMode(RuntimeConfig runtimeConfig, Session replyTo, String replyToMessageId) {
-        if(userIdForComfortSignature == null && (runtimeConfig == null || (runtimeConfig.getUserId() == null || runtimeConfig.getUserId().isEmpty()))) {
+        if (userIdForComfortSignature == null && (runtimeConfig == null || (runtimeConfig.getUserId() == null || runtimeConfig.getUserId().isEmpty()))) {
             Status status = new Status();
             status.setResult("OK");
             ComfortSignatureStatusEnum comfortSignatureStatus = ComfortSignatureStatusEnum.DISABLED;
@@ -962,15 +947,23 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
 
         String signatureServiceCardHandle;
         try {
-            signatureServiceCardHandle = getSignatureServiceCardHandle(runtimeConfig);;
+            signatureServiceCardHandle = getSignatureServiceCardHandle(runtimeConfig);
             ContextType contextType = connectorServicesProvider.getContextType(runtimeConfig);
-            if(runtimeConfig != null && runtimeConfig.getUserId() != null && !"".equals(runtimeConfig.getUserId())) {
+            if (runtimeConfig != null && runtimeConfig.getUserId() != null && !"".equals(runtimeConfig.getUserId())) {
                 contextType.setUserId(runtimeConfig.getUserId());
             } else {
                 contextType.setUserId(userIdForComfortSignature);
             }
-            connectorServicesProvider.getSignatureServicePortTypeV755(runtimeConfig).getSignatureMode(signatureServiceCardHandle, contextType, status, comfortSignatureStatus,
-                    comfortSignatureMax, comfortSignatureTimer, sessionInfo);
+            SignatureServicePortTypeV755 signatureServicePortTypeV755 = connectorServicesProvider.getSignatureServicePortTypeV755(runtimeConfig);
+            signatureServicePortTypeV755.getSignatureMode(
+                signatureServiceCardHandle,
+                contextType,
+                status,
+                comfortSignatureStatus,
+                comfortSignatureMax,
+                comfortSignatureTimer,
+                sessionInfo
+            );
             return new GetSignatureModeResponseEvent(status.value, comfortSignatureStatus.value, comfortSignatureMax.value, comfortSignatureTimer.value, sessionInfo.value);
         } catch (ConnectorCardsException | FaultMessage e) {
             log.log(Level.WARNING, "Could not get signature signature", e);
@@ -995,21 +988,18 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
         deactivateComfortSignature(runtimeConfig, null, null);
     }
 
-    /**
-     *
-     */
     public void deactivateComfortSignature(RuntimeConfig runtimeConfig, Session replyTo, String replyToMessageId) {
-        String signatureServiceCardHandle = null;
         try {
-            signatureServiceCardHandle = getSignatureServiceCardHandle(runtimeConfig);
+            String signatureServiceCardHandle = getSignatureServiceCardHandle(runtimeConfig);
             ContextType contextType = connectorServicesProvider.getContextType(runtimeConfig);
-            if(runtimeConfig != null && runtimeConfig.getUserId() != null && !"".equals(runtimeConfig.getUserId())) {
+            if (runtimeConfig != null && runtimeConfig.getUserId() != null && !"".equals(runtimeConfig.getUserId())) {
                 contextType.setUserId(runtimeConfig.getUserId());
             } else {
                 contextType.setUserId(userIdForComfortSignature);
             }
-            
-            connectorServicesProvider.getSignatureServicePortTypeV755(runtimeConfig).deactivateComfortSignature(Arrays.asList(signatureServiceCardHandle));
+
+            SignatureServicePortTypeV755 signatureServicePortTypeV755 = connectorServicesProvider.getSignatureServicePortTypeV755(runtimeConfig);
+            signatureServicePortTypeV755.deactivateComfortSignature(List.of(signatureServiceCardHandle));
             userIdForComfortSignature = null;
         } catch (ConnectorCardsException | FaultMessage e) {
             log.log(Level.WARNING, "Could not deactivate comfort signature", e);
@@ -1027,18 +1017,15 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
         }
     }
 
-    public GetCardsResponse getCards()throws de.gematik.ws.conn.eventservice.wsdl.v7.FaultMessage {
+    public GetCardsResponse getCards() throws de.gematik.ws.conn.eventservice.wsdl.v7.FaultMessage {
         return getCards(null);
     }
 
-    /**
-     * @throws de.gematik.ws.conn.eventservice.wsdl.v7.FaultMessage
-     */
     public GetCardsResponse getCards(RuntimeConfig runtimeConfig) throws de.gematik.ws.conn.eventservice.wsdl.v7.FaultMessage {
         GetCards parameter = new GetCards();
         parameter.setContext(connectorServicesProvider.getContextType(runtimeConfig));
         EventServicePortType eventServicePortType = connectorServicesProvider.getEventServicePortType(runtimeConfig); // todo: if runtimeconfig without userid/hba/smcb: connectorBaseURL ignored ! request to http://ti-konnektor/eventservice
-        if(eventServicePortType == null) {
+        if (eventServicePortType == null) {
             throw new RuntimeException("EventServicePortType is null. This normally means that the connector configuration is not correct.");
         } else {
             return eventServicePortType.getCards(parameter);
@@ -1049,24 +1036,24 @@ public class ERezeptWorkflowService extends BearerTokenManageService {
      * Checks if ERezeptService is reachable
      */
     public boolean isERezeptServiceReachable(RuntimeConfig runtimeConfig, String parameterBearerToken) {
-        String prescriptionServiceURL = (runtimeConfig != null && runtimeConfig.getPrescriptionServerURL() != null) ? runtimeConfig.getPrescriptionServerURL() : appConfig.getPrescriptionServiceURL();
-        if (prescriptionServiceURL==null) return false;
+        String prescriptionServiceURL = (runtimeConfig != null && runtimeConfig.getPrescriptionServerURL() != null)
+            ? runtimeConfig.getPrescriptionServerURL()
+            : appConfig.getPrescriptionServiceURL();
+        if (prescriptionServiceURL == null) return false;
         // use a http client that does not use a VAU implementation
         Client testClient = ClientBuilder.newBuilder()
-            .readTimeout(3, TimeUnit.SECONDS).connectTimeout(3, TimeUnit.SECONDS).build();
+            .readTimeout(3, TimeUnit.SECONDS)
+            .connectTimeout(3, TimeUnit.SECONDS)
+            .build();
         try (Response response = testClient
-                                 .target(prescriptionServiceURL)
-                                 .request()
-                                 .header("User-Agent", appConfig.getUserAgent())
-                                 .header("Authorization", "Bearer " + parameterBearerToken)
-                                 .get()
-            ) {
-            if (response.getStatus() == Response.Status.OK.getStatusCode()) {
-                return true;
-            } else {
-                return false;
-            }
-        } catch(Exception ex) {
+            .target(prescriptionServiceURL)
+            .request()
+            .header("User-Agent", appConfig.getUserAgent())
+            .header("Authorization", "Bearer " + parameterBearerToken)
+            .get()
+        ) {
+            return response.getStatus() == Response.Status.OK.getStatusCode();
+        } catch (Exception ex) {
             return false;
         }
     }
